Adjust line-height of header on mobile, fixes #39

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -54,7 +54,7 @@
     align-items: center;
     position: relative;
     text-align: center;
-    line-height: 53PX;
+    line-height: 53px;
 
     .h4c-title--inner {
         border-top: 3px solid get-color('yellow');
